--- a/style.css
+++ b/style.css
@@ -8,3 +8,31 @@ main {
     width: 100%;
     height: 100vh;
 }
+.container {
+    width: inherit;
+    height: inherit;
+    display: flex;
+}
+.content {
+    width: 60%;
+    height: 100%;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.background-picture {
+    width: 40%;
+    height: 100%;
+    background-image: url("https://joico.b-cdn.net/assets/chris-lee-70l1tDAI6rM-unsplash.jpeg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: right top;
+    border-radius: 50px 0 0 50px;
+}
+.form-container {
+    width: 420px;
+    height: 500px;
+    padding-top: 20px;
+    position: relative;
+}
